Bug 30554 - Still using GL stuff, doesn't build
Summary: Still using GL stuff, doesn't build
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Carl Worth
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-02 00:10 UTC by Cyril Brulebois
Modified: 2010-10-02 02:08 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Cyril Brulebois 2010-10-02 00:10:59 UTC
938ef4eaec claims GL stuff is all gone, but that's not true:
  CC     i810_accel.lo
In file included from ../../../../src/legacy/i810/i810_accel.c:41:
../../../../src/legacy/i810/i810.h:60:23: error: GL/glxint.h: No such file or directory
In file included from ../../../../src/legacy/i810/i810_accel.c:41:
../../../../src/legacy/i810/i810.h:233: error: expected specifier-qualifier-list before '__GLXvisualConfig'
make[5]: *** [i810_accel.lo] Error 1

You probably want to revert that part at least (configure.ac):
-        PKG_CHECK_MODULES(DRI, [xf86driproto glproto])
+        PKG_CHECK_MODULES(DRI, [xf86driproto])

so that the build fails earlier:
configure: error: Package requirements (xf86driproto glproto) were not met:
No package 'glproto' found

until GL stuff is gone for real.
Comment 1 Chris Wilson 2010-10-02 02:08:37 UTC
commit 97fea2fd0c36d78f4e940b124a7886c4a3f3dfc7
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Oct 2 10:05:59 2010 +0100

    legacy/i810: Remove pVisualConfigs
    
    Completely unused pulling in an undesired glxproto dependency.
    
    Reported-by: Cyril Brulebois <kibi@debian.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=30554
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.