legacy/i810: Remove pVisualConfigs

Completely unused pulling in an undesired glxproto dependency.

Reported-by: Cyril Brulebois <kibi@debian.org>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=30554
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>