src/legacy/i810/i810_dri.c
@@ -938,10 +938,6 @@ I810DRICloseScreen(ScreenPtr pScreen)
       DRIDestroyInfoRec(pI810->pDRIInfo);
       pI810->pDRIInfo = NULL;
    }
-   if (pI810->pVisualConfigs)
-      free(pI810->pVisualConfigs);
-   if (pI810->pVisualConfigsPriv)
-      free(pI810->pVisualConfigsPriv);
 }
 
 static Bool
